--- a/OpenCase/css/main.css
+++ b/OpenCase/css/main.css
@@ -179,7 +179,7 @@ body {
     content: "";
     display: block;
     position: absolute;
-    top: 79px;
+    margin-top: 79px;
     border: 7px solid transparent;
     border-bottom: 6px solid #DCDE37;
     border-left: 10px solid #DCDE37;
