--- a/OpenCase/css/main.css
+++ b/OpenCase/css/main.css
@@ -403,8 +403,8 @@ button#what-i-can-win-Button {
     width: 30px;
     height: 30px;
     position: absolute;
-    margin-left: -30px;
-    margin-top: -17px;
+    bottom: 0;
+	right: 0;
     background: url(../images/weapon_selected.png);
 }
 
