--- a/OpenCase/css/rulet.css
+++ b/OpenCase/css/rulet.css
@@ -14,12 +14,12 @@ body {
 }
 #circle {
     width: 250px;
+    height: 250px;
     max-width: 100%;
-	margin: 0 auto;
-	margin-top: 50px;
-	-webkit-transform: translate3d(0, 0, 0);
-	position: relative;
-    background: #171a2a;
+    margin: 0 auto;
+    margin-top: 50px;
+    -webkit-transform: translate3d(0, 0, 0);
+    position: relative;
     border-radius: 50%;
     padding: 2px;
     border: 2px solid #afafaf;
