--- a/OpenCase/css/rarity.css
+++ b/OpenCase/css/rarity.css
@@ -25,25 +25,33 @@
 
 .consumer {
 	background: linear-gradient(to right,#9EA7AE,#687073);
+	background: -webkit-linear-gradient(to right, #9EA7AE,#687073);
 }
 .industrialS, .industrial {
     background: linear-gradient(to right,#4A78AD,#324455);
+		background: -webkit-linear-gradient(to right, #4A78AD,#324455);
 }
 .milspec {
     background: linear-gradient(to right,#3747A7,#262E5E);
+		background: -webkit-linear-gradient(to right, #3747A7,#262E5E);
 }
 .restricted {
     background: linear-gradient(to right,#6533A6,#422660);
+		background: -webkit-linear-gradient(to right, #6533A6,#422660);
 }
 .classified{
     background: linear-gradient(to right,#A41EA0,#5E1D57);
+		background: -webkit-linear-gradient(to right, #A41EA0,#5E1D57);
 }
 .covert {
     background: linear-gradient(to right,#BA3432,#662226);
+		background: -webkit-linear-gradient(to right, #BA3432,#662226);
 }
 .rare {
     background: linear-gradient(to right,#DAB515,#826E1B);
+		background: -webkit-linear-gradient(to right, #DAB515,#826E1B);
 }
 .workshop {
     background: linear-gradient(to right,#0ec571,#076339);
+		background: -webkit-linear-gradient(to right, #0ec571,#076339);
 }
