--- a/OpenCase/css/rulet.css
+++ b/OpenCase/css/rulet.css
@@ -107,10 +107,13 @@ body {
 }
 
 .items {
-    border-collapse: collapse;
     width: 100%;
-    max-width: 100%;
     margin: 0 auto;
+    color: #fff;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.84);
+    max-width: 100%;
+    list-style: none;
+    padding: 0;
 }
 
 @media (min-width:595px) {
@@ -119,23 +122,27 @@ body {
     }
 }
 
-tr {
-    color: #fff;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.84);
-    /*border-bottom: 2px solid;*/
-    max-width: 100%;
+
+/*.game-bet {
+    background: #232E3C;
+}*/
+
+.game-bet__info {
+    background: #232E3C;
+    display: table;
+    width: 100%;
+    position: relative;
 }
 
-.game-bet {
-    background: #232E3C;
+.game-bet__player {
+    display: table-cell;
 }
 
 .game-bet__player img {
     width: 50px;
     vertical-align: middle;
-    margin-right: 10px;
+    margin: 4px 10px 4px 4px;
 }
-
 .game-bet__tickets {
     white-space: nowrap;
     width: 100px;
@@ -144,6 +151,9 @@ tr {
     width: 130px;
     background: #B04444;
     padding-left: 12px;
+    display: table-cell;
+    position: relative;
+    vertical-align: middle;
 }
 
 .game-bet__tickets::before {
@@ -192,7 +202,25 @@ tr {
     font-size: 0.9em;
     padding: 3px;
 }
-
+.hide-items {
+    height: 185px;
+    overflow: hidden;
+    margin-bottom: 5px;
+    position: relative;
+}
+.hide-items::after {
+    content: '...';
+    display: block;
+    width: 100%;
+    height: 50px;
+    position: absolute;
+    bottom: 0;
+    background: linear-gradient(to top, #19212B, RGBA(0, 0, 0, 0));
+    vertical-align: middle;
+    line-height: 1em;
+    font-size: 3em;
+    color: #fff;
+}
 td {
     padding: 2px 4px 2px 6px;
     position: relative;
