--- a/OpenCase/css/buttons.css
+++ b/OpenCase/css/buttons.css
@@ -61,6 +61,33 @@ button.button_glass:active {
     -webkit-filter: grayscale(1);
     opacity: 0.5;
 }
+.button_black {
+    position: relative;
+    border: none;
+    background: #3E3E3E;
+    color: #fff;
+    font-weight: bold;
+    border-radius: 2px;
+    padding: 6px;
+    box-shadow: 0 0 10px #000 inset;
+    margin: 3px 3px 5px 3px;
+    cursor: pointer;
+    overflow: hidden;
+    white-space: nowrap;
+    -webkit-transition-duration: 0.3s;
+            transition-duration: 0.3s;
+}
+.button_black:hover {
+    color: #0ACEFE;
+}
+.button_black:active {
+    box-shadow: 0 0 20px #000 inset;
+    color: #00A4CC;
+}
+.button_black:disabled {
+    opacity: 0.6;
+    cursor: not-allowed;
+}
 button.with_icon {
   padding-left: calc(1em + 10px);
 }
@@ -74,5 +101,7 @@ button.double_icon:before {
     vertical-align: middle;
     position: absolute;
     left: 7px;
-    top: 0.35em;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
 }
