--- a/OpenCase/css/double.css
+++ b/OpenCase/css/double.css
@@ -1,4 +1,4 @@
-﻿#containter {
+﻿#container {
     width: 100%;
     position: absolute;
     top: 0;
@@ -21,8 +21,11 @@
 .last-games {
     text-align: center;
     overflow: hidden;
-	height: 46px;
-	background: url(../images/double/last-games-background.png) #484848;
+    height: 46px;
+    background: #151515;
+    padding: 5px 0;
+    box-shadow: 0 0px 5px #000 inset;
+    line-height: 3em;
 }
 .inline {
     display: inline-block;
@@ -111,11 +114,10 @@
 	cursor: pointer;
 }
 #bet {
-    width: calc(100% - 16px);
+    width: calc(100% - 26px);
     text-align: center;
     height: 37px;
     font-size: 1em;
-    border: 1px solid #303030;
     margin: 5px 8px;
 }
 
