--- a/OpenCase/css/main.css
+++ b/OpenCase/css/main.css
@@ -1,8 +1,23 @@
 body {
     /* background: url(../images/background.png) fixed no-repeat; */
 	background: #19212b;
-    background-size: cover;
-	margin: 0;
+  background: linear-gradient(to right, #1A2B3B, #233444, #272B37, #192229);
+  background-size: cover;
+	/*margin: 0;*/
+  overflow-x: hidden;
+}
+#container {
+    padding-top:40px;
+    font-family: Lato;
+    overflow-x: hidden;
+    width:100%;
+    position: absolute;
+    top:0;
+    left:0
+}
+.menuOpen {
+    -webkit-transform: translate(270px, -10px);
+            transform: translate(270px, -10px);
 }
 .cases {
     text-align: center;
@@ -17,6 +32,7 @@ body {
     text-align: center;
 	background: linear-gradient(to top, #A8A8A8, #474747);
     box-shadow: 0px 0px 7px #000;
+    position: relative;
 }
 #showVideoAd {
     border: 1px solid #055400;
@@ -495,4 +511,30 @@ h3.lines span::after {
 }
 .sold-out.big:after {
     font-size: 2em;
+}
+i.double-icon {
+    width: 15px;
+    height: 15px;
+    display: inline-block;
+    background: url(../images/double/coin-white.png);
+    background-size: cover;
+    vertical-align: middle;
+    margin: 2px;
+    position: relative;
+    top: -2px;
+}
+
+input[type="text"] {
+    background: rgba(0,0,0, 0.5);
+    border: none;
+    border-bottom: 1px solid #00ACEF;
+    box-shadow: 0 0 3px #000 inset;
+    height: 24px;
+    color: #ccc;
+    padding: 2px 6px;
+    outline: none;
+    margin-bottom: 5px;
+}
+input[type="text"]:focus {
+  color:#fff;
 }
