--- a/OpenCase/css/marketplace.css
+++ b/OpenCase/css/marketplace.css
@@ -15,7 +15,6 @@
     font-size: 16px;
     font-family: Lato, sans-serif;
 	font-weight: bold;
-    border: 0 none;
     height: 52px;
     margin-right: 0;
     color: white;
@@ -24,6 +23,10 @@
     float: left;
     box-sizing: border-box;
     transition: all 0.15s;
+}
+#buy_count {
+    width: 30px;
+    text-align: center;
 }
 ::-webkit-input-placeholder { /* WebKit browsers */
     color: white;
@@ -233,4 +236,17 @@ i.double-icon {
     text-shadow: 0 0 1px RGBA(0, 0, 0, 0.71);
     border: 3px solid;
     padding: 4px;
+}
+.countChange {
+    padding: 3px 6px;
+    background: #3A6BC5;
+    border: none;
+    margin: 0 8px;
+    color: #fff;
+    font-weight: Bold;
+    font-size: 1em;
+    border-radius: 4px;
+    min-width: 30px;
+    display: inline-block;
+    height: 29px;
 }
