--- a/OpenCase/css/navigationMenu.css
+++ b/OpenCase/css/navigationMenu.css
@@ -1,12 +1,12 @@
 .navigationBar {
-    background: #0F0F0F;
+    background: linear-gradient(to right, #1A2B3B, #233444, #272B37, #192229);
     position: fixed;
     top: 0;
     width: 100%;
     height: 40px;
     vertical-align: middle;
     z-index: 30;
-    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.8);
     text-align: center;
 	overflow: hidden;
 }
@@ -32,36 +32,34 @@
 	color: #fff;
 	font-weight: bold;
 }
-.leftMenu {
-    height: 100%;
-    position: fixed;
-    background: rgba(27, 27, 27, 0.9);
-    width: 270px;
-    z-index: 1000;
-    box-shadow: 0 1px 6px #000;
-    top: 0;
-	-webkit-transform: translateZ(0);
-	overflow: auto;
-    /*min-width: 260px;
-    max-width: calc(100% - 40px);*/
-}
 .menu_playerInfo {
     display: block;
     background: #303030;
     box-shadow: -1px 2px 3px #000;
     padding: 10px;
 }
+#menu_playerInfo_info {
+    display: flex;
+    flex-flow: row nowrap;
+    display: -webkit-box;
+    justify-content: flex-start;
+    margin-bottom: 5px;
+}
 .menu_ava {
-    width: 80px;
-    border-radius: 50%;
+    width: 60px;
     line-height: 20px;
-	margin-right: 10px;
+	  margin-right: 10px;
+    vertical-align: middle;
+}
+#menu_playerInfo_info_text {
+    padding-top: 10px;
+}
+#menu_playerInfo_name {
+    display: block;
 }
 .menu_playerInfo span {
     color: #fff;
-    text-align: center;
-    line-height: 90px;
-	font-family: Lato;
+	  font-family: Lato;
 }
 .menu_rank img {
     width: 60px;
@@ -90,27 +88,97 @@
     -o-transition: width 0.6s ease;
     transition: width 0.6s ease;
 }
-.leftMenu ul {
+.left-menu {
+    height: 100%;
+    position: fixed;
+    background: rgba(27, 27, 27, 0.9);
+    width: 270px;
+    z-index: 1000;
+    box-shadow: 0 1px 6px #000;
+    top: 0;
+    -webkit-transform: translateZ(0);
+    overflow: auto;
+    min-width: 260px;
+    max-width: calc(100% - 40px);
+    -webkit-transition-duration: 0.5s;
+    transition-duration: 0.5s;
+}
+.left-menu.closed {
+  left:-270px;
+}
+.left-menu.opened {
+  left:0px;
+}
+.left-menu ul {
     list-style: none;
     font-family: LatoLight;
     font-size: 1.2em;
-	padding: 0;
-	margin-top: 0;
+	  padding: 0;
+	  margin-top: 0;
 }
-.leftMenu li {
+.left-menu li {
     border-bottom: 1px solid RGBA(255, 255, 255, 0.15);
+    position: relative;
 }
-.leftMenu a {
+.left-menu a {
     padding: 15px 10px;
     display: block;
     color: #fff;
     text-decoration: none;
+    position: relative;
 }
-.podmenu {
-    font-size: 0.9em;
+.submenu ul {
+    font-size: 0.9em !important;
+    overflow: hidden;
 }
-.podmenu li {
+.submenu li {
     background: rgba(0,0,0,0.5);
+}
+.submenu > a:after {
+    content: '';
+    display: block;
+    height: 11px;
+    width: 8px;
+    position: absolute;
+    top: 50%;
+    right: 15px;
+    background: url(../images/arrow.svg) no-repeat;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    -webkit-transition: transform 0.2s;
+    transition: transform 0.2s;
+}
+.submenu.opened > a:after {
+  -webkit-transform: translateY(-50%) rotate(90deg);
+  -ms-transform: translateY(-50%) rotate(90deg);
+  transform: translateY(-50%) rotate(90deg);
+}
+.submenu.closed ul {
+    max-height: 0;
+}
+.submenu.opened ul {
+    max-height: 500px;
+}
+.submenu ul {
+  -webkit-transition: max-height 0.5s;
+     -moz-transition: max-height 0.5s;
+          transition: max-height 0.5s;
+}
+.submenu ul li:first-child {
+    border-top: 1px solid RGBA(255, 255, 255, 0.15);
+}
+.submenu ul li:last-child {
+    border-bottom: none;
+}
+.site-overlay {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.5);
+    z-index: 29;
 }
 .icon {
     margin: 0 17px 0 11px;
