--- a/OpenCase/css/rps.css
+++ b/OpenCase/css/rps.css
@@ -4,14 +4,13 @@
 	height: 100%;
 }
 .container {
-    margin-top: 50px;
-	width: 100%;
+    padding-top: 50px;
+		width: 100%;
     position: absolute;
     top: 0;
     left: 0;
     overflow-x: hidden;
-	height: calc(100% - 50px);
-    background: url(../images/background.png);
+		height: calc(100% - 50px);
     background-size: cover;
 }
 .battle-field {
