--- a/OpenCase/css/spinking.css
+++ b/OpenCase/css/spinking.css
@@ -1,4 +1,4 @@
-#containter {
+#container {
     font-family: Lato;
     padding-top: 40px;
 		overflow-x: hidden;
@@ -42,11 +42,10 @@
 }
 
 #bet {
-    width: calc(100% - 16px);
+    width: calc(100% - 26px);
     text-align: center;
     height: 37px;
     font-size: 1em;
-    border: 1px solid #303030;
     margin: 5px 8px;
 }
 .winList {
