--- a/OpenCase/css/main.css
+++ b/OpenCase/css/main.css
@@ -524,7 +524,7 @@ i.double-icon {
     top: -2px;
 }
 
-input[type="text"] {
+.input-text, input[type="text"], input[type="password"] {
     background: rgba(0,0,0, 0.5);
     border: none;
     border-bottom: 1px solid #00ACEF;
@@ -535,6 +535,6 @@ input[type="text"] {
     outline: none;
     margin-bottom: 5px;
 }
-input[type="text"]:focus {
+.input-text:focus, input[type="text"]:focus, input[type="password"]:focus {
   color:#fff;
 }
