--- a/OpenCase/css/chat.css
+++ b/OpenCase/css/chat.css
@@ -138,3 +138,16 @@ li.chat__message img {
     height: auto;
     word-break: break-all;
 }
+#login-status {
+    color: #cf0000;
+    font-size: 0.9em;
+    margin-bottom: 5px;
+}
+#forgot-pass {
+    color: #858DA2;
+    text-decoration: none;
+    border-bottom: 1px solid;
+    font-size: 0.8em;
+    margin-top: 10px;
+    display: inline-block;
+}
