Chat. Msg to player

--- a/OpenCase/css/chat.css
+++ b/OpenCase/css/chat.css
@@ -99,6 +99,7 @@ li.chat__message img {
     box-shadow: 0 0 5px rgba(0,0,0, 0.2);
     word-wrap: break-word;
     max-width: calc(100% - 107px);
+    cursor: pointer;
 }
 .message__info::before {
     content: '';
@@ -118,6 +119,10 @@ li.chat__message img {
     color: #cb6a6a;
     font-size: 14px;
     font-weight: bold;
+}
+.hey-player {
+    color: #cb6a6a;
+    font-weight: normal;
 }
 .message__time {
     color: #c5c5c5;
@@ -156,6 +161,10 @@ li.chat__message img {
     left: auto;
     border-left: 20px solid #fff;
     border-right: none;
+}
+
+.msgToMe .message__info {
+    box-shadow: 0px 0 5px rgba(255, 0, 216, 0.5);
 }
 
 .chat__write {
