chat nickname update

--- a/OpenCase/css/chat.css
+++ b/OpenCase/css/chat.css
@@ -120,7 +120,7 @@ li.chat__message img {
     font-size: 14px;
     font-weight: bold;
 }
-.hey-player {
+.player-nickname {
     color: #cb6a6a;
     font-weight: normal;
 }
