--- a/OpenCase/css/chat.css
+++ b/OpenCase/css/chat.css
@@ -167,6 +167,21 @@ li.chat__message img {
     box-shadow: 0px 0 5px rgba(255, 0, 216, 0.5);
 }
 
+.message__moderator {
+    display: flex;
+    position: absolute;
+    right: -16px;
+    flex-direction: column;
+    top: 0;
+    background: #fff;
+    padding: 2px;
+    padding-left: 11px;
+    border-radius: 5px;
+    align-items: center;
+    align-content: center;
+    color: #B10909;
+}
+
 .chat__write {
     display: flex;
     flex-direction: row;
