--- a/OpenCase/css/inventory-portable.css
+++ b/OpenCase/css/inventory-portable.css
@@ -9,15 +9,15 @@
     overflow-y: auto;
     height: 100%;
 }
-.inventory a:visited, .inventory a {
+.inventory a:visited, .inventory a, .port-inventory a:visited, .port-inventory a {
     coloR: #fffec4;
 	font-weight: bold;
 }
-.inventory {
+.inventory, .port-inventory {
     padding: 0 10px;
 	margin-bottom: 45px;
 }
-#inventorySum {
+.inventorySum {
     position: fixed;
     top: 3px;
     left: 3px;
@@ -39,4 +39,52 @@
     width: 100%;
 	text-transform: uppercase;
     font-size: 0.9em;
+}
+@media (max-height:555px) {
+	.fullWeaponInfo {
+		width: 450px;
+		padding: 5px;
+		padding-top: 0;
+	}
+	#weaponImg {
+		width: 150px;
+		float: left;
+		margin: 8px 0 8px 8px;
+	}
+	#weaponInfoTable {
+		width: calc(100% - 160px);
+		margin-top: 5px;
+	}
+	#weaponInfoTable tr td:nth-child(2n) {
+		padding-left: 15px;
+	}
+	#statTrakImg {
+		width: 55px;
+		position: absolute;
+		right: 0;
+		left: 7px;
+		bottom: 7px;
+	}
+}
+
+@media (max-width: 450px) {
+	.weapon {
+		height: 113px;
+		width: 98px;
+	}
+	.wp-statTrak::before {
+		margin-top: 65px;
+	}
+	.weapon img {
+		width: 86px;
+		height: 91px;
+	}
+	.type {
+		font-size: 9px;
+	}
+	.weapon i {
+		font-size: 7pt;
+		font-family: Lato;
+		font-weight: Lighter;
+	}
 }
