--- a/OpenCase/css/profile.css
+++ b/OpenCase/css/profile.css
@@ -533,3 +533,29 @@ ul.posts__user-posts {
 .disabled {
     opacity: 0.5;
 }
+.moder-menu {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background: #eee;
+    padding: 5px;
+}
+
+.block-reason {
+    color: #000;
+    padding:5px;
+    background: #fff;
+    margin-top:10px;
+    border-radius: 5px;
+    position: relative;
+    width:100%;
+    box-shadow: 0px 0px 5px rgba(0,0,0,0.1);
+}
+
+.block-container {
+    max-width: 190px;
+    text-align: center;
+}
+.lobibox-input {
+    color: #000 !important;
+}
