--- a/OpenCase/css/main.css
+++ b/OpenCase/css/main.css
@@ -535,6 +535,11 @@ i.double-icon {
     outline: none;
     margin-bottom: 5px;
 }
+
+.input-text.light, input[type="text"].light, input[type="password"].light {
+    background:rgba(255,255,255, 0.8);
+    color: #000 !important;
+}
 .input-text:focus, input[type="text"]:focus, input[type="password"]:focus {
   color:#fff;
 }
