--- a/OpenCase/css/fonts.css
+++ b/OpenCase/css/fonts.css
@@ -106,6 +106,9 @@
 .icon-coin-dollar:before {
   content: "\e93b";
 }
+.icon-bubbles2:before {
+  content: "\e96d";
+}
 .icon-spinner5:before {
   content: "\e97e";
 }
