--- a/OpenCase/css/online-games.css
+++ b/OpenCase/css/online-games.css
@@ -47,6 +47,10 @@
     color:lightsteelblue;
 }
 
+.chat__message__message.warning {
+    color:lightcoral;
+}
+
 .message__name {
     color:antiquewhite
 }
