--- a/OpenCase/css/main.css
+++ b/OpenCase/css/main.css
@@ -561,3 +561,28 @@ a[href*='vk.com'] {
     align-items: center;
     align-content: center;
 }
+
+/* === Permanent-ban === */
+.permanent-ban {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    left: 0;
+    right: 0;
+    background: #000;
+    z-index: 1000;
+    margin: 0;
+    color: #fff;
+    text-align: center;
+    padding: 5px;
+}
+.permanent-ban h1 {
+    color: red;
+}
+.permanent-ban i {
+    display: block;
+    font-style: normal;
+    position: fixed;
+    bottom: 5px;
+    color: #626262;
+}
