--- a/OpenCase/css/navigationMenu.css
+++ b/OpenCase/css/navigationMenu.css
@@ -59,19 +59,36 @@
 }
 .menu_playerInfo span {
     color: #fff;
-	  font-family: Lato;
+    font-family: Lato;
 }
-.menu_rank img {
-    width: 60px;
+.menu_rank__top {
+    text-align: center;
+}
+.menu_rank__lvl {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+.lvl {
+    background: #9c9c9c;
+    padding: 0 3px;
+    font-size: 0.85em;
+    font-weight: bold;
+}
+.lvl.lvl-current {
+    background: #D8534F;
 }
 .progress {
     overflow: hidden;
     height: 8px;
-    margin: 5px 0;
+    margin: 5px;
     background-color: #f5f5f5;
     border-radius: 3px;
     -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    flex-grow: 2;
 }
 .progress-bar {
     float: left;
@@ -87,6 +104,14 @@
     -webkit-transition: width 0.6s ease;
     -o-transition: width 0.6s ease;
     transition: width 0.6s ease;
+}
+.menu_rank__bottom {
+    text-align: right;
+}
+.menu_rank__next-lvl-exp {
+    font-size: 0.65em;
+    text-transform: uppercase;
+    color: #C5C5C5 !important;
 }
 .left-menu {
     height: 100%;
