--- a/OpenCase/css/rarity.css
+++ b/OpenCase/css/rarity.css
@@ -1,53 +1,53 @@
-.consumer, .consumer-color {
+.consumer, .consumer-color, .base, .base-color {
 	background: #9EA7AE;
 }
 .industrial, .industrial-color {
 	background: #4A78AD;
 }
-.milspec, .milspec-color {
+.milspec, .milspec-color, .high, .high-color {
 	background: #3747A7;
 }
-.restricted, .restricted-color {
+.restricted, .restricted-color, .remarkable, .remarkable-color {
 	background: #6533A6;
 }
-.classified, .classified-color {
+.classified, .classified-color, .exotic, .exotic-color {
 	background: #A41EA0;
 }
-.covert, .covert-color {
+.covert, .covert-color, .extraordinary, .extraordinary-color {
 	background: #BA3432;
 }
-.rare, .rare-color {
+.rare, .rare-color, .contraband, .contraband-color {
 	background: #DAB515;
 }
 .workshop, .workshop-color {
     background: #0ec571;
 }
 
-.consumer {
+.consumer, .base {
 	background: linear-gradient(to right,#9EA7AE,#687073);
 	background: -webkit-linear-gradient(to right, #9EA7AE,#687073);
 }
-.industrialS, .industrial {
+.industrial {
     background: linear-gradient(to right,#4A78AD,#324455);
 		background: -webkit-linear-gradient(to right, #4A78AD,#324455);
 }
-.milspec {
+.milspec, .high {
     background: linear-gradient(to right,#3747A7,#262E5E);
 		background: -webkit-linear-gradient(to right, #3747A7,#262E5E);
 }
-.restricted {
+.restricted, .remarkable {
     background: linear-gradient(to right,#6533A6,#422660);
 		background: -webkit-linear-gradient(to right, #6533A6,#422660);
 }
-.classified{
+.classified, .exotic{
     background: linear-gradient(to right,#A41EA0,#5E1D57);
 		background: -webkit-linear-gradient(to right, #A41EA0,#5E1D57);
 }
-.covert {
+.covert, .extraordinary {
     background: linear-gradient(to right,#BA3432,#662226);
 		background: -webkit-linear-gradient(to right, #BA3432,#662226);
 }
-.rare {
+.rare, .contraband {
     background: linear-gradient(to right,#DAB515,#826E1B);
 		background: -webkit-linear-gradient(to right, #DAB515,#826E1B);
 }
