--- a/OpenCase_Beta/css/winter.css
+++ b/OpenCase_Beta/css/winter.css
@@ -1,7 +1,7 @@
 .snow{
 	background: none;
 	font-family: Androgyne;
-	background-image: url('http://www.wearewebstars.dk/codepen/img/s1.png'), url('http://www.wearewebstars.dk/codepen/img//s2.png'), url('http://www.wearewebstars.dk/codepen/img//s3.png');
+	background-image: url('../images/winter/s1.png'), url('../images/winter/s2.png'), url('../images/winter/s3.png');
 	height: 100%;
 	left: 0;
 	position: absolute;
