--- a/OpenCase_Beta/css/winter.css
+++ b/OpenCase_Beta/css/winter.css
@@ -1,35 +1,13 @@
-.snow{
-	background: none;
-	font-family: Androgyne;
-	background-image: url('../images/winter/s1.png'), url('../images/winter/s2.png'), url('../images/winter/s3.png');
-	height: 100%;
-	left: 0;
-	position: absolute;
-	top: 0;
-	width: 100%;
-	z-index:1;
-	-webkit-animation: snow 10s linear infinite;
-	-moz-animation: snow 10s linear infinite;
-	-ms-animation: snow 10s linear infinite;
-	animation: snow 10s linear infinite;
+/* === Chat === */
+.message__info__from-time:before {
+    content: '';
+    display: block;
+    position: absolute;
+    background: url(../images/winter/chat/snow1.png), url(../images/winter/chat/snow2.png), url(../images/winter/chat/snow3.png);
+    width: calc(100% + 8px);
+    height: 20px;
+    background-repeat: no-repeat;
+    top: -7px;
+    background-position: center, 0, right;
+    left: -4px;
 }
-@keyframes snow {
-  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  50% {background-position: 500px 500px, 100px 200px, -100px 150px;}
-  100% {background-position: 500px 1000px, 200px 400px, -100px 300px;}
-}
-@-moz-keyframes snow {
-  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  50% {background-position: 500px 500px, 100px 200px, -100px 150px;}
-  100% {background-position: 400px 1000px, 200px 400px, 100px 300px;}
-}
-@-webkit-keyframes snow {
-  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  50% {background-position: 500px 500px, 100px 200px, -100px 150px;}
-  100% {background-position: 500px 1000px, 200px 400px, -100px 300px;}
-}
-@-ms-keyframes snow {
-  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  50% {background-position: 500px 500px, 100px 200px, -100px 150px;}
-  100% {background-position: 500px 1000px, 200px 400px, -100px 300px;}
-}	
