--- a/OpenCase_Beta/css/winter.css
+++ b/OpenCase_Beta/css/winter.css
@@ -29,3 +29,8 @@
     background-position: 0, center, right;
     left: -4px;
 }
+
+/* === Weapon Info === */
+.fullWeaponInfo #weaponImg {
+    background: url(../images/winter/Weapon_snow.gif), radial-gradient(at top, #86AEF6, #284271);
+}
