--- a/OpenCase_Beta/css/main.css
+++ b/OpenCase_Beta/css/main.css
@@ -34,6 +34,20 @@ body {
     box-shadow: 0px 0px 7px #000;
     position: relative;
 }
+.case .countdown {
+    position: absolute;
+    background: rgba(255, 255, 255, 0.2);
+    padding: 4px 0;
+    top: 0;
+    font-size: 0.7em;
+    color: #fff;
+    font-weight: bolder;
+    letter-spacing: 2px;
+    width: 100%;
+}
+.countdown.lastDay {
+    background: rgba(150, 0, 0, 0.5);
+}
 #showVideoAd {
     border: 1px solid #055400;
     margin: 0 auto;
