--- a/OpenCase/css/buttons.css
+++ b/OpenCase/css/buttons.css
@@ -112,7 +112,7 @@ button.double_icon:before {
     border-radius: 2px;
     padding: 5px 20px;
     text-align: center;
-    font-family: Lato;
+    font-family: LatoRegular;
     font-weight: Bold;
     background: #00ACEF;
     background: linear-gradient(to bottom, #00ACEF, #0E81AE);
