--- a/OpenCase/css/double.css
+++ b/OpenCase/css/double.css
@@ -6,7 +6,7 @@
     overflow-x: hidden;
 	padding-top:50px;
 	color: #fff;
-	font-family: Lato;
+	font-family: LatoRegular;
 }
 
 @media (max-width:495px) {
