--- a/OpenCase/css/rulet.css
+++ b/OpenCase/css/rulet.css
@@ -11,7 +11,7 @@ body {
     padding-top: 5px;
     overflow-x: hidden;
     padding-bottom: 45px;
-    font-family: Lato;
+    font-family: LatoRegular;
 }
 
 #circle {
