--- a/OpenCase/css/chat.css
+++ b/OpenCase/css/chat.css
@@ -94,7 +94,7 @@ li.chat__message {
     align-items: center;
     position: relative;
 }
-li.chat__message img:nth-child(1) {
+li.chat__message a img[data-userid] {
     width: 50px;
     height: 50px;
     border-radius: 50%;
