--- a/OpenCase/css/coinflip.css
+++ b/OpenCase/css/coinflip.css
@@ -1,4 +1,4 @@
-﻿html, body {
+html, body {
 margin: 0;
 width: 100%;
 height: 100%;
@@ -6,7 +6,7 @@ background-color: #333;
 }
 .container {
 	overflow-x:hidden;
-	font-family: Lato;
+	font-family: LatoRegular;
 }
 @media(max-width:390px) {
 	.container {
@@ -44,7 +44,7 @@ background-color: #333;
     border-radius: 2px;
     text-transform: uppercase;
     font-size: 0.9em;
-    font-family: Lato;
+    font-family: LatoRegular;
 	cursor: pointer;
 	font-weight: bold;
 }
@@ -111,7 +111,7 @@ ul.bot-inventory {
     width: 100%;
     display: inline-block;
 	text-align: center;
-    font-family: Lato;
+    font-family: LatoRegular;
 }
 .game__bot__nick, .game__player__nick {
     display: block;
@@ -133,7 +133,7 @@ ul.bot-inventory {
 }
 .game__start {
     color: #fff;
-    font-family: Lato;
+    font-family: LatoRegular;
     text-align: center;
 }
 .game__start__button:before, .game__start__button:after {
@@ -173,7 +173,7 @@ ul.bot-inventory {
     color: #fff;
     text-align: left;
     border-collapse: collapse;
-    font-family: Lato;
+    font-family: LatoRegular;
 	font-size: 0.85em;
 	width: 100%;
 }
