--- a/OpenCase/css/navigationMenu.css
+++ b/OpenCase/css/navigationMenu.css
@@ -27,7 +27,7 @@
 	display: inline-block;
     text-align: center;
     line-height: 40px;
-    font-family: Lato;
+    font-family: LatoRegular;
     font-size: 1.3em;
 	color: #fff;
 	font-weight: bold;
@@ -59,7 +59,7 @@
 }
 .menu_playerInfo span {
     color: #fff;
-    font-family: Lato;
+    font-family: LatoRegular;
 }
 .menu_rank__top {
     text-align: center;
@@ -226,6 +226,6 @@
 sup.beta {
     color: red;
     font-size: 0.65em;
-    font-family: Lato;
+    font-family: LatoRegular;
     font-weight: 400;
 }
