--- a/OpenCase/css/rps.css
+++ b/OpenCase/css/rps.css
@@ -1,4 +1,4 @@
-﻿body {
+body {
 	padding-bottom: 0;
 	width: 100%;
 	height: 100%;
@@ -78,12 +78,12 @@
 .status {
     color: #fff;
     text-align: center;
-    font-family: Lato;
+    font-family: LatoRegular;
 }
 .count {
     text-align: center;
     white-space: nowrap;
-    font-family: Lato;
+    font-family: LatoRegular;
     margin-top: 176px;
 }
 .count div {
@@ -136,7 +136,7 @@ ul.winItems {
     list-style: none;
     padding-left: 0;
     color: #fff;
-    font-family: Lato;
+    font-family: LatoRegular;
 }
 ul.winItems li {
     border-bottom: 1px solid #000;
