--- a/OpenCase_Beta/css/marketplace.css
+++ b/OpenCase_Beta/css/marketplace.css
@@ -10,19 +10,17 @@
     padding: 4px;
 }
 #search_text {
-    width: calc(100% - 60px);
-    padding: 15px 0 15px 20px;
+    padding: 10px 0 10px 10px;
     font-size: 16px;
     font-family: Lato, sans-serif;
-	font-weight: bold;
-    height: 52px;
+    font-weight: bold;
+    height: 31px;
     margin-right: 0;
     color: white;
     outline: none;
     background: #121212;
-    float: left;
-    box-sizing: border-box;
     transition: all 0.15s;
+    width: 100%;
 }
 #buy_count {
     width: 30px;
@@ -47,14 +45,16 @@
     border: 0 none;
     background: #1f7f5c;
     width: 60px;
-    float: left;
     padding: 0;
     text-align: center;
     height: 52px;
     cursor: pointer;
-	color: #fff;
-	line-height: 49px;
-	font-size: 22px;
+    color: #fff;
+    line-height: 49px;
+    font-size: 22px;
+    position: absolute;
+    top: 44px;
+    right: 0;
 }
 #search_result {
     margin: 0 auto;
