--- a/OpenCase_Beta/css/main.css
+++ b/OpenCase_Beta/css/main.css
@@ -331,6 +331,7 @@ body {
     width: 15000px;
     text-align: left;
 	-webkit-transform: translate3d(0, 0, 0);
+    /*transition: all 10s cubic-bezier(0.07, 0.49, 0.39, 1);*/
 }
 @media (max-width: 433px) {
 	.case {
@@ -603,6 +604,7 @@ a[href*='vk.com'] {
     color: #fff;
     text-align: center;
     padding: 5px;
+    top: 0;
 }
 .permanent-ban h1 {
     color: red;
@@ -614,5 +616,3 @@ a[href*='vk.com'] {
     bottom: 5px;
     color: #626262;
 }
-
-
